# Banking-Application-GTF-CPP

./: .gitignore  CMakeLists.txt  Login.cpp  Login.h  README.md  main.cpp
database-utilities/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseResults.cpp  DatabaseResults.h  DatabaseStatements.cpp  DatabaseStatements.h
dtos/: UserDto.cpp  UserDto.h
interface/: UiComponents.cpp  UiComponents.h  WelcomeScreen.cpp  WelcomeScreen.h
services/: LoginService.cpp  LoginService.h  RegisterService.cpp  RegisterService.h
